# PIEPpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Ckpar-Z.for  DC-short.docx  DC-short.md  LICENSE  Piep.par  README.md  build.ps1  commands-n.md  commands.txt  conventions-t.md  piep  piep17.for  pub.md  pub_si.md  run_piep.ps1  sub.for  sub_program_list.txt
docs/: fortran_build.md  legacy_transcript_test.md  modern_cpp_build.md  piep_gm_algorithm.md  piep_modernization_plan.md  piep_overview.md  piep_source_synopsis.md  piep_test_strategy.md
misc_tools/: docx_to_agentic_md.py  docx_to_agentic_md_fixed.py
modern/cpp/: CMakeLists.txt
modern/cpp/docs/: candidate_generation_phase4.md  geometry_phase1.md  gm_search_phase7.md  implementation_layout_phase12.md  indexing_phase5.md  next_steps_phase13.md  pattern_prep_phase2.md  postprocessing_phase8.md  python_api_phase11.md  sad_inputs_phase9.md  sad_simulation_phase6.md  search_setup_phase3.md  synthetic_pipeline_phase10.md
modern/cpp/examples/: smoke_geometry.cpp
modern/cpp/include/piep/crystal/: cell.hpp  reflection.hpp
modern/cpp/include/piep/indexing/: indexing_engine.hpp
modern/cpp/include/piep/math/: matrix3.hpp  vector3.hpp
modern/cpp/include/piep/postprocessing/: cell_postprocessing.hpp
modern/cpp/include/piep/search/: candidate_generator.hpp  candidate_store.hpp  gm_search.hpp  pattern_prep.hpp  reference_selection.hpp  search_grid.hpp
modern/cpp/include/piep/simulation/: sad_simulator.hpp
modern/cpp/python/: module.cpp  smoke_bindings.py  test_api.py
modern/cpp/python/notebooks/: 01_archived_examples.ipynb  02_synthetic_pipeline.ipynb
modern/cpp/python/piep/: __init__.py  api.py  examples.py
modern/cpp/tests/: search_fixtures.hpp  test_candidate_generation.cpp  test_geometry.cpp  test_gm_search.cpp  test_indexing.cpp  test_pattern_prep.cpp  test_pipeline_synthetic.cpp  test_postprocessing.cpp  test_search_setup.cpp  test_simulation.cpp
sad_and_cell_files/: Piepo.par
tests/legacy_transcripts/: __init__.py  piep_harness.py  piep_harness_simplified.py  test_pub_si_protocols.py  test_pub_si_protocols_simplified.py
tests/legacy_transcripts/protocols/: cupc.json  grgds.json  lysozyme.json
